# libshmlite

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
docs/: Doxyfile
include/libshmlite/: common_utils.h  shm_handle.h  shm_lock.h  shm_pool.hpp
include/libshmlite/container/: shm_array.hpp
src/libshmlite/: common_utils.cc  shm_handle.cc  shm_lock.cc
test/: CMakeLists.txt  run_all_test.bash  test_shmarray.cc  test_shmhandle.cc  test_shmlock.cc  test_shmpool.cc
